Add SiliconFlow embeddings and DeepSeek chat wrappers

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-# LLM Model - Get key at https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-api-key
+# SiliconFlow Embeddings - Get key at https://cloud.siliconflow.cn/
+SILICONFLOW_API_KEY=your-api-key
+# Optional: override the default SiliconFlow API host
+# SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1/embeddings
+
+# DeepSeek Chat - Get key at https://platform.deepseek.com/
+DEEPSEEK_API_KEY=your-api-key
+# Optional: override the default DeepSeek API host
+# DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 
 # LangSmith - Get key at https://smith.langchain.com
 LANGCHAIN_TRACING_V2=true
